<resources>
    <string name="app_name">Pocket Server</string>
    <string name="main_title">Local Web Server</string>
    <string name="main_folder_title">Website folder</string>
    <string name="main_folder_select">Select Website Folder</string>
    <string name="main_QR_show">Show QR Code</string>
    <string name="main_start">Start</string>
    <string name="main_stop">Stop</string>
    <string name="main_hotspot">Hotspot is OFF</string>
    <string name="main_mobile_data">Mobile data is ON</string>
    <string name="main_info_title">App info</string>
    <string name="main_info_close">Close</string>
    <string name="main_info_text">Open source app :3</string>

</resources>