<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="28sp"
            android:textStyle="bold"/>


        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/main_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:textAllCaps="false"
            android:text="i">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_mobile_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_mobile_data"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="#FFCD9B"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp">
        </TextView>

        <TextView
            android:id="@+id/main_hotspot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_hotspot"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="#FFCD9B"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:backgroundTint="#D3D3D3"
        android:background="@drawable/rounded_ui">


            <TextView
                android:id="@+id/folderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No folder selected"
                android:padding="12dp"
                android:backgroundTint="#FFD5D5"
                android:textColor="#000000"
                android:layout_margin="6dp"
                android:background="@drawable/rounded_ui"
                 />


        <ImageView
            android:id="@+id/image_show"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="Mascot"
            android:src="@drawable/arf"
            android:backgroundTint="#00ffffff"
            android:background="@drawable/rounded_ui"
            android:layout_marginTop="6dp">
        </ImageView>

        <TextView
            android:id="@+id/urlText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="URL: —"
            android:textSize="16sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="6dp">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_start"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="#B5FFA7"
            android:padding="16dp"
            />
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_stop"
            android:background="@drawable/rounded_ui"
            android:backgroundTint="#FFCCCC"
            android:padding="16dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">
    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status: Stopped"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/qrButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_QR_show" />

    <Button
        android:id="@+id/selectFolderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_folder_select" />
    </LinearLayout>

</LinearLayout>

</ScrollView>
